# The only reason we're installing these things is to use them when building
# examples.
stuff_DATA = Automake.rules \
             Make.defs \
             header_stamp.sh \
             bootstrap-generated-example.sh \
             make_example_metamakefiles.py \
             anag_style_build.py \
             makemakefile_anag.py \
             other_legal_options.txt \
             genConfDir.py
stuffdir = $(pkgdatadir)

EXTRA_DIST = $(stuff_DATA)
